ServiceMesh/istio-install/dev/lab2-k8s/multicluster/multicluster-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: istio-system
    topology.istio.io/network: "network2"
  name: istio-system
